Fix dark mode font size and added lagel to dark mode button

--- a/src/Home.css
+++ b/src/Home.css
@@ -16,6 +16,10 @@
   width: 30%;
 }
 
+p {
+  margin-bottom: 5px;
+}
+
 .resume-link,
 .resume-link-dark {
   font-family: "Open Sans", sans-serif;
@@ -69,6 +73,13 @@
   flex-direction: column;
   align-items: flex-end;
   width: 95%;
+}
+
+.toggle-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .switch {
