--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -22,6 +22,8 @@
 
 .navbar-item-dark {
   color: white;
+  margin: 5px;
+  font-size: medium;
 }
 
 .navbar-item:after {
